[project]
name = "rt-2023-rextlib"
version = "0.1.0"
dependencies = [
    "aiomysql~=0.2.0",
    "cryptography~=41.0.3",
    "orjson~=3.9.5",
    "aiofiles>=23.2.1",
]
authors = [
    {name = "AoHaru I/O", email = "support@aoharu.io"},
    {name = "Neodyland", email = "support@neody.land"},
]
requires-python = ">=3.11"
readme = "README.md"
scripts = { make-rt-secret-key = "rextlib.make_key:main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rextlib"]
